# KI-SZZ_Fridrich_Petr

./: README.md  main.py  pyproject.toml  requirements.txt
Data/: Math.csv  Math.xlsx
