[tool.poetry]
name = "szz-prakticka"
version = "0.1.0"
description = "Statnicova otazka"
authors = ["PetrFridrich <petr.fridrich.1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
streamlit = "^1.35.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
scipy = "^1.13.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
